fix: set experience container height to min-height On small enough screens, the fixed height causes the title to get pushed to the top, eventually disappearing. settings its height to min-height fixes this issue.

--- a/src/styles/experience.scss
+++ b/src/styles/experience.scss
@@ -32,7 +32,7 @@
         position: relative;
         background-color: $secondary_background_color;
         border-radius: $border_radius;
-        height: 200px;
+        min-height: 200px;
         border: 1px solid $main_border_color;
         width: calc(50% - 10px - 2px);
         display: flex;
@@ -66,7 +66,7 @@
             top: 10px;
             right: 10px;
             height: 100px;
-            opacity: 0.8;
+            opacity: 0.7;
         }
     }
     @media (max-width: $md) {
